feat(erp): publish supply-chain bpm and return flow updates
Bundle the current backend, frontend, SQL, and test updates for BPM callback handling, purchase return workflow, and list/detail page behavior.

Exclude local worktree archives and Playwright artifacts from this commit.